fixed cart icon so it justifys to the end and align self to middle

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -15,6 +15,7 @@ h1 {
 .cart-icon-link img {
     width: 1.5em;
     height: 1.5em;
+    margin: 1em;
 }
 
 a, h1 {
